changes Service page content overflow and fixed discord button in services

--- a/css/style.css
+++ b/css/style.css
@@ -977,7 +977,7 @@ div.card {
   font-weight: 700;
   letter-spacing: 1px;
   padding: 14px 36px;
-  margin-top: 62px;
+  margin-top: 65px;
   margin-right: 16px;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
